[gd_scene load_steps=48 format=3 uid="uid://h8a8r2wb5lu3"]

[ext_resource type="Script" uid="uid://bcji03sv3g5eh" path="res://entities/player/player.gd" id="1_symyc"]
[ext_resource type="PackedScene" uid="uid://cpmp45bvptfux" path="res://entities/Animated-3D-Robot/Blend/Robot.blend" id="2_abrql"]
[ext_resource type="PackedScene" uid="uid://batbj1n45877r" path="res://entities/player/alice.tscn" id="3_fkugw"]
[ext_resource type="PackedScene" uid="uid://bh7uolja3nijw" path="res://entities/player/hookshot.tscn" id="4_bls4j"]

[sub_resource type="Curve" id="Curve_symyc"]
_data = [Vector2(0, 0), 0.0, 4.50435, 0, 0, Vector2(1, 1), 1.38649, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_abrql"]
_data = [Vector2(0, 1), 0.0, -0.080464, 0, 0, Vector2(1e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.95077, 0.0, 0, 0]
point_count = 3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pwfib"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fkugw"]
size = Vector3(15, 10, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bls4j"]
size = Vector3(0.996185, 1.54065, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_8fjmc"]
size = Vector3(0.1, 1.75, 1)

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_05bod"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kmjeu"]
animation = &"Robot_ThumbsUp"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_ftwnj"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_66dil"]
animation = &"Robot_Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lpckl"]
animation = &"Robot_Punch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1u1xl"]
animation = &"Robot_Wave"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vsfr3"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fowm0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hv4gf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b005u"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hvy0c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o1rvb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_igwd3"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oosq7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ha0b0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_85a73"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pdqh3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hxva3"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xtfgc"]
states/Robot_Jump/node = SubResource("AnimationNodeAnimation_66dil")
states/Robot_Jump/position = Vector2(492, 192.667)
states/Robot_Punch/node = SubResource("AnimationNodeAnimation_lpckl")
states/Robot_Punch/position = Vector2(410.667, 79.3333)
states/Robot_Wave/node = SubResource("AnimationNodeAnimation_1u1xl")
states/Robot_Wave/position = Vector2(620, -24.6667)
states/Start/position = Vector2(180, 79.5556)
transitions = ["Start", "Robot_Punch", SubResource("AnimationNodeStateMachineTransition_vsfr3"), "Robot_Punch", "End", SubResource("AnimationNodeStateMachineTransition_fowm0"), "Start", "Robot_Jump", SubResource("AnimationNodeStateMachineTransition_hv4gf"), "Robot_Jump", "End", SubResource("AnimationNodeStateMachineTransition_b005u"), "Robot_Punch", "Robot_Jump", SubResource("AnimationNodeStateMachineTransition_hvy0c"), "Robot_Jump", "Robot_Punch", SubResource("AnimationNodeStateMachineTransition_o1rvb"), "Start", "Robot_Wave", SubResource("AnimationNodeStateMachineTransition_igwd3"), "Robot_Wave", "End", SubResource("AnimationNodeStateMachineTransition_oosq7"), "Robot_Wave", "Robot_Punch", SubResource("AnimationNodeStateMachineTransition_ha0b0"), "Robot_Punch", "Robot_Wave", SubResource("AnimationNodeStateMachineTransition_85a73"), "Robot_Wave", "Robot_Jump", SubResource("AnimationNodeStateMachineTransition_pdqh3"), "Robot_Jump", "Robot_Wave", SubResource("AnimationNodeStateMachineTransition_hxva3")]
graph_offset = Vector2(-104, -40)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bls4j"]
animation = &"Robot_Standing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_05bod"]
animation = &"Robot_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vsfr3"]
animation = &"Robot_Running"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fowm0"]
animation = &"Robot_Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xtfgc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hlx2b"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_764mo"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61rmo"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8rhtf"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tsq4r"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t82xd"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fkugw"]
xfade_time = 0.3

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8fjmc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qiwj3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_26q78"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ur8kk"]
states/Ledge_Grab/node = SubResource("AnimationNodeAnimation_bls4j")
states/Ledge_Grab/position = Vector2(396.292, 58.3471)
states/Start/position = Vector2(52, 45.3333)
states/idle/node = SubResource("AnimationNodeAnimation_05bod")
states/idle/position = Vector2(279.667, 106.667)
states/run/node = SubResource("AnimationNodeAnimation_vsfr3")
states/run/position = Vector2(670.333, 68)
states/walk/node = SubResource("AnimationNodeAnimation_fowm0")
states/walk/position = Vector2(354.333, -60)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_xtfgc"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_hlx2b"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_764mo"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_61rmo"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_8rhtf"), "walk", "run", SubResource("AnimationNodeStateMachineTransition_tsq4r"), "run", "walk", SubResource("AnimationNodeStateMachineTransition_t82xd"), "Ledge_Grab", "idle", SubResource("AnimationNodeStateMachineTransition_fkugw"), "walk", "Ledge_Grab", SubResource("AnimationNodeStateMachineTransition_8fjmc"), "run", "Ledge_Grab", SubResource("AnimationNodeStateMachineTransition_qiwj3"), "idle", "Ledge_Grab", SubResource("AnimationNodeStateMachineTransition_26q78")]
graph_offset = Vector2(-146.375, -61.5251)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_2dkur"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_bls4j"]
graph_offset = Vector2(-730.166, -23.629)
nodes/Add2/node = SubResource("AnimationNodeAdd2_05bod")
nodes/Add2/position = Vector2(-613.333, 133.333)
nodes/OneShotAnimation/node = SubResource("AnimationNodeAnimation_kmjeu")
nodes/OneShotAnimation/position = Vector2(-400, 320)
nodes/OneShotBlend/node = SubResource("AnimationNodeOneShot_ftwnj")
nodes/OneShotBlend/position = Vector2(-80, 106.667)
nodes/StateMachine_action/node = SubResource("AnimationNodeStateMachine_xtfgc")
nodes/StateMachine_action/position = Vector2(-1013.33, 320)
nodes/StateMachine_running/node = SubResource("AnimationNodeStateMachine_ur8kk")
nodes/StateMachine_running/position = Vector2(-933.333, 80)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_2dkur")
nodes/TimeScale/position = Vector2(133.333, 160)
node_connections = [&"Add2", 0, &"StateMachine_running", &"Add2", 1, &"StateMachine_action", &"OneShotBlend", 0, &"Add2", &"OneShotBlend", 1, &"OneShotAnimation", &"TimeScale", 0, &"OneShotBlend", &"output", 0, &"TimeScale"]

[node name="Myck" type="CharacterBody3D" node_paths=PackedStringArray("mesh") groups=["player"]]
collision_layer = 4
collision_mask = 3
axis_lock_linear_z = true
script = ExtResource("1_symyc")
speed = 13.0
acceleration_curve = SubResource("Curve_symyc")
deceleration_curve = SubResource("Curve_abrql")
mesh = NodePath("MeshParent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_pwfib")

[node name="MeshParent" type="Marker3D" parent="."]

[node name="AutoAim" type="Area3D" parent="MeshParent"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshParent/AutoAim"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 2, 0)
shape = SubResource("BoxShape3D_fkugw")

[node name="PickChild" type="Area3D" parent="MeshParent"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshParent/PickChild"]
shape = SubResource("BoxShape3D_bls4j")

[node name="Robot" parent="MeshParent" instance=ExtResource("2_abrql")]
transform = Transform3D(-1.87959e-08, 0, 0.43, 0, 0.43, 0, -0.43, 0, -1.87959e-08, 0, -0.984005, 0)

[node name="Skeleton3D" parent="MeshParent/Robot/RobotArmature" index="0"]
bones/1/position = Vector3(0.636722, 0.0305792, 0.0570147)
bones/1/rotation = Quaternion(8.27772e-09, 0.69555, 0.718478, 1.35428e-07)
bones/2/position = Vector3(0.0052459, 1.34194, 0.30772)
bones/6/rotation = Quaternion(-0.0435724, -0.0212678, 0.0424266, 0.997922)
bones/7/position = Vector3(-1.26516e-08, 0.309867, -1.12956e-08)
bones/7/rotation = Quaternion(-0.0475129, -0.00569604, -0.0783429, 0.995777)
bones/8/position = Vector3(0.582738, 0.296721, 0.0324413)
bones/8/rotation = Quaternion(0.00372427, -0.0543372, -0.99618, -0.0682649)
bones/9/rotation = Quaternion(-0.0946606, -0.665474, 0.110848, 0.732049)
bones/10/rotation = Quaternion(0.402263, 0.640135, -0.506731, 0.41429)
bones/12/rotation = Quaternion(-0.0063194, 0.0361187, -0.761411, 0.647231)
bones/13/rotation = Quaternion(-0.0500215, 0.0197902, -0.876258, 0.47883)
bones/14/rotation = Quaternion(0.767949, 0.631496, 0.103321, 0.0281402)
bones/15/rotation = Quaternion(-0.424161, 0.366626, 0.772243, -0.298854)
bones/17/rotation = Quaternion(0.157848, -0.359936, -0.766552, 0.507867)
bones/18/rotation = Quaternion(-0.053142, -0.0044308, -0.876831, 0.477832)
bones/20/rotation = Quaternion(-0.203395, 0.449491, -0.743668, 0.451161)
bones/21/rotation = Quaternion(-0.0531421, -0.00443071, -0.876831, 0.477832)
bones/22/position = Vector3(-0.636816, 0.296747, 0.0324391)
bones/22/rotation = Quaternion(-0.012289, 0.0530604, 0.972768, 0.225291)
bones/23/rotation = Quaternion(0.0436596, 0.804563, 0.057581, 0.589455)
bones/24/rotation = Quaternion(0.176536, -0.649806, 0.391552, 0.627117)
bones/26/rotation = Quaternion(-0.118448, 0.00784899, 0.477606, 0.870517)
bones/27/rotation = Quaternion(0.0952783, -0.0785528, 0.513295, 0.849282)
bones/28/rotation = Quaternion(0.588531, -0.521404, -0.382808, 0.485002)
bones/29/rotation = Quaternion(-0.135572, 0.735133, 0.594621, -0.296016)
bones/31/rotation = Quaternion(-0.456825, -0.599791, 0.0213247, 0.656587)
bones/32/rotation = Quaternion(-0.047851, 0.0272297, 0.611428, 0.789382)
bones/33/rotation = Quaternion(-0.115109, 0.858055, -0.363121, -0.344435)
bones/34/rotation = Quaternion(0.52118, 0.556388, 0.129058, 0.634152)
bones/35/rotation = Quaternion(0.183194, 0.0363821, 0.418698, 0.888712)
bones/36/rotation = Quaternion(0.540697, 0.196965, -0.800415, 0.167893)
bones/36/scale = Vector3(0.999993, 1, 1.00003)
bones/37/rotation = Quaternion(0.434159, 1.14998e-07, -8.91176e-08, 0.900836)
bones/38/rotation = Quaternion(0.532959, -0.195974, 0.806513, 0.164579)
bones/38/scale = Vector3(0.999992, 1, 1.00003)
bones/39/rotation = Quaternion(0.434153, -2.99301e-07, 9.22013e-08, 0.900839)
bones/40/position = Vector3(3.10964, 2.65557, 0.837375)
bones/41/position = Vector3(-0.636881, 0.0305792, 0.057014)
bones/41/rotation = Quaternion(5.22174e-07, 0.69555, 0.718478, 6.32924e-07)
bones/42/position = Vector3(-3.45851, 2.42529, 0.859867)

[node name="ChildContainer" type="Node3D" parent="MeshParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.5, 0)

[node name="Alice" parent="MeshParent/ChildContainer" instance=ExtResource("3_fkugw")]

[node name="LedgeGrab" type="RayCast3D" parent="MeshParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.759068, 0.787161, 0)
target_position = Vector3(0, -0.8, 0)

[node name="CheckCollisions" type="RayCast3D" parent="MeshParent/LedgeGrab"]
target_position = Vector3(0, 1, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="WallJump" type="ShapeCast3D" parent="MeshParent"]
shape = SubResource("BoxShape3D_8fjmc")
target_position = Vector3(0.555, 0, 0)

[node name="CameraPivot" type="Node3D" parent="."]
top_level = true

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26566, 14.4483)

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="QueueTimer" type="Timer" parent="."]
one_shot = true

[node name="ComboResetTimer" type="Timer" parent="."]
one_shot = true

[node name="DashResetTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../MeshParent/Robot")
tree_root = SubResource("AnimationNodeBlendTree_bls4j")
anim_player = NodePath("../MeshParent/Robot/AnimationPlayer")
parameters/Add2/add_amount = 0.5
parameters/OneShotBlend/active = 0.0
parameters/OneShotBlend/internal_active = 1.58333
parameters/OneShotBlend/request = 0
parameters/TimeScale/scale = 1.0

[node name="GrapplingHookParent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("4_bls4j")]
player = NodePath("..")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[editable path="MeshParent/Robot"]
